--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,19 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color: #da353b;
+}
+
+.bg-primary {
+  background-color: var(--primary-color);
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-primary-hover:hover {
+  color: var(--primary-color);
 }
 
 @theme inline {
